[gd_scene load_steps=3 format=3 uid="uid://crjemhpcmuknv"]

[ext_resource type="Script" path="res://scenes/scripts/patch_controls.gd" id="1_4tija"]
[ext_resource type="PackedScene" uid="uid://dvokuf8gpcq1q" path="res://scenes/knob.tscn" id="1_t87t7"]

[node name="PatchControls" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("1_4tija")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PortamentoKnob" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_t87t7")]
unique_name_in_owner = true
layout_mode = 2
max_value = 0.5
step = 0.001
sensitivity = 0.1
label_unit = "s"
title = "Portamento"
nonlinear_factor = 0.5

[node name="GainKnob" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_t87t7")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
sensitivity = 0.2
title = "Gain"
nonlinear_factor = 2.0
current_value = 1.0

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/PortamentoKnob" to="." method="_on_portamento_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/GainKnob" to="." method="_on_gain_knob_value_changed"]
